<resources>
    <string name="app_name">JungExWeb</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string-array name="alert_photo" >
        <item>카메라로 사직찍기</item>
        <item>앨범에서 가져오기</item>
    </string-array>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_viewNever">ViewNever</string>
    <string name="menu_viewReCycle">ViewReCycle</string>
</resources>