<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.jungexweb.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.jungexweb.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.jungexweb.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <!--화면을 프래드먼트 단위로 나눠어 관리 -->
    <fragment
        android:id="@+id/nav_viewNever"
        android:name="com.example.jungexweb.ui.viewNever.ViewNeverFragment"
        android:label="@string/menu_viewNever"
        tools:layout="@layout/fragment_viewnever" />
    <fragment
        android:id="@+id/nav_viewReCycle"
        android:name="com.example.jungexweb.ui.viewReCycle.ViewReCycleFragment"
        android:label="@string/menu_viewReCycle"
        tools:layout="@layout/fragment_viewrecycle" />
</navigation>